objects/SunPower_Communities__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for all SunPower Communities</description>
    <fields>
        <fullName>CommunityURL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feed_Creator__c</fullName>
        <label>Feed Creator</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsReplyTo__c</fullName>
        <label>Leads Reply To</label>
        <type>Email</type>
    </fields>
    <label>SunPower Communities</label>
</CustomObject>